# Test__task__DDC

./: .gitignore  README.md  pyproject.toml  requirements.txt
News/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
News/static/News/css/: base.css  edit_news.css  home.css  news_list.css  read_news.css
News/static/user_auth/css/: reg.css
NewsProject/: celery.py  settings.py  signals.py  tasks.py  urls.py
media/user_1/e/0bba0e75-89bd-4014-88c4-33df354876c7.jpeg/2025/01/14/09/59/: 17
media/user_1/e/1e7bd430-6974-4dda-8baf-2b8164b12e95.jpeg/2025/01/14/04/04/: 15
media/user_1/e/2c5d2452-657c-406b-ba38-4b7b4f018068.jpeg/2025/01/12/23/22/: 38
media/user_1/e/3312ecd3-3417-45ef-8052-b86e3ec1da66.jpeg/2025/01/12/23/38/: 50
media/user_1/e/3ebe8b0c-b7b2-4145-afc1-7c3b5603016b.jpeg/2025/01/12/23/21/: 08
media/user_1/e/4d92748a-825f-446e-845a-3dd81c844567.jpeg/2025/01/13/01/56/: 48
media/user_1/e/7c150f04-399d-4620-a5b8-f87b490f8348.jpeg/2025/01/12/23/34/: 10
media/user_1/e/8b9c8f3c-9b64-4517-8a08-c385e4c7e474.jpeg/2025/01/14/23/53/: 04
media/user_1/n/11.11.png/2025/01/14/23/53/: 04
remarkable_places/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
static/News/css/: home.css  news_list.css  read_news.css
static/user_auth/css/: reg.css
templates/News/: base.html  edit_news.html  home.html  news_list.html  post_new.html  read_news.html
templates/auth/: login.html  reg.html
templates/remarkable_places/: add_records_form.html  base.html  places_info.html  record_change_list.html
user_auth/: forms.py  urls.py  views.py
(+15 files in other folders)
